--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -18,7 +18,11 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             >
-
+            <EditText
+                android:id="@+id/editTextRegName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint=" patient Name" />
             <EditText
                 android:id="@+id/editTextRegEmail"
                 android:layout_width="wrap_content"
@@ -32,17 +36,17 @@
                 android:hint="Password"
                 android:inputType="textPassword" />
 
-            <EditText
-                android:id="@+id/editTextRegName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:hint="Name" />
 
             <Button
                 android:id="@+id/btnRegister"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Register" />
+                android:text="Register patient" />
+            <Button
+                android:id="@+id/btnSignUp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Register clinician" />
 
             <TextView
                 android:id="@+id/tvBackToLogin"
